--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-cayman
 
-title: [The title of your site]
-description: [A short description of your site's purpose]
+title: [Teste da Geração de Página com Jekyll]
+description: [Aprender a usar o GitHub Pages]
