Set theme jekyll-theme-slate

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-theme: jekyll-theme-cayman
+theme: jekyll-theme-slate
 
 title: [Teste da Geração de Página com Jekyll]
 description: [Aprender a usar o GitHub Pages]
